// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step Component Should match the snapshot 1`] = `
<li
  className="Step__ProgressStep-sc-2fi2qc-1 cnITNu"
>
  <p
    className="Step__Title-sc-2fi2qc-2 eoZsRv"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with icon 1`] = `
<li
  className="Step__ProgressStep-sc-2fi2qc-1 cnITNu"
>
  <p
    className="Step__Title-sc-2fi2qc-2 eoZsRv"
  >
    Step 1
  </p>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Step__StepIcon-sc-2fi2qc-0 dkraaq"
    status=""
    style={
      Object {
        "color": "",
      }
    }
  >
    person
  </span>
</li>
`;

exports[`Step Component Should match the snapshot with status active 1`] = `
<li
  className="Step__ProgressStep-sc-2fi2qc-1 hcPuAb"
>
  <p
    className="Step__Title-sc-2fi2qc-2 eoZsRv"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with status done 1`] = `
<li
  className="Step__ProgressStep-sc-2fi2qc-1 iITDkp"
>
  <p
    className="Step__Title-sc-2fi2qc-2 eoZsRv"
  >
    Step 1
  </p>
  
</li>
`;
